Edited wiki page tutor01 through web user interface.

--- a/wiki/tutor01.wiki
+++ b/wiki/tutor01.wiki
@@ -1,3 +1,14 @@
 tutor01
 
 http://img593.imageshack.us/img593/6974/captureuwx.png
+
+{{{
+#include "FiveDos.ch"
+
+function Main()
+
+    MsgInfo( F2VERSION + CRLF + CRLF + FDCOPYRIGHT ,;
+             "Clipper for MS-Dos Library" )
+
+return nil
+}}}
